Update Azure README with environment variables